k8s-deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: europe-west1-docker.pkg.dev/silver-wall-460719-s8/devops-repo/frontend:latest
        ports:
        - containerPort: 80  
        resources:
          requests:
            cpu: "100m"  
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
