k8s-deployment/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP  
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: backend
