k8s-deployment/ingresss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service  
            port:
              number: 80
      - path: /api   
        pathType: Prefix
        backend:
          service:
            name: backend-service   
            port:
              number: 3000
